# nth

./: .bazelrc  .gitignore  .rustfmt.toml  404.html  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  index.html  mkdocs.yml  search.html
nth/algorithm/: BUILD  BUILD.bazel  tree.h  tree_test.cc
nth/algorithm/internal/: BUILD  BUILD.bazel  tree.h
nth/container/: BUILD  BUILD.bazel  black_hole.h  black_hole_test.cc  disjoint_set.h  disjoint_set_test.cc  flat_forest.h  flat_forest_test.cc  flyweight_map.h  flyweight_map_test.cc  flyweight_set.h  flyweight_set_test.cc  free_functions.h  interval.h  interval_map.h  interval_map_test.cc  interval_set.h  interval_set_test.cc  interval_test.cc  stable_container.h  stable_container_test.cc  stack.h  stack_test.cc
nth/container/internal/: BUILD  BUILD.bazel  index.h
nth/debug/: BUILD  BUILD.bazel  config.cc  config.h  debug.h  expectation_result.cc  expectation_result.h  expectation_result_test.cc  fakeable_function.h  log.h  source_location.h  source_location_test.cc  test.h  trace.h  trace_test.cc  unimplemented.h  unimplemented_compiles_test.cc  unimplemented_test.cc  unreachable.h  unreachable_compiles_test.cc  unreachable_test.cc  verbosity.h  verbosity_test.cc
nth/debug/contracts/: BUILD  BUILD.bazel  contract.h  contracts.cc  contracts.h  contracts_test.cc  registry.ld  tracing.h  violation.cc  violation.h
nth/debug/internal/: BUILD  BUILD.bazel  log.cc  log.h  raw_check.h  trace.h  trace_declare_api.h  trace_operators.h  unimplemented.h  unreachable.h  verbosity.h  verbosity_test.cc
nth/debug/log/: BUILD  BUILD.bazel  blah.cc  configuration.h  entry.cc  entry.h  file_log_sink.h  line.cc  line.h  line_metadata.h  log.cc  log.h  log_test.cc  registry.ld  sink.cc  sink.h  stderr_log_sink.h  stderr_sink.h  vector_log_sink.h
nth/debug/property/: BUILD  BUILD.bazel  property.h  property_test.cc
nth/debug/trace/: BUILD  BUILD.bazel  expectation_result.cc  expectation_result.h  matcher.h  matcher_test.cc  testing.h  trace.cc  trace.h  trace_test.cc
nth/debug/verbosity/: BUILD  verbosity.h  verbosity_test.cc
nth/dynamic/: BUILD  BUILD.bazel  jit_function.h  jit_function_test.cc
nth/dynamic/internal/: BUILD  BUILD.bazel  jit_function_base.cc  jit_function_base.h
nth/format/: BUILD  BUILD.bazel  cc.h  cc_test.cc  common.h  common_defaults.h  common_formatters.h  concept.h  format.h  format_test.cc  forward.h  interpolate.h  interpolate_test.cc  json.h  json_test.cc  structure.h
nth/format/internal/: BUILD  format.h  parameter_range.h
nth/format/interpolate/: BUILD  interpolate.h  interpolate_test.cc  spec.h  spec_test.cc  string.h  string_view.h
nth/io/: BUILD  BUILD.bazel  deserialize.h  environment_variable.cc  environment_variable.h  environment_variable_test.cc  file.cc  file.h  file_path.cc  file_path.h  file_path_test.cc  file_printer.cc  file_printer.h  file_printer_test.cc  format.h  format_test.cc  printer.h  printer_test.cc  reader_test.h  round_trip_test.cc  serialize.h  string_printer.h  string_printer_test.cc  string_reader.cc  string_reader.h  string_reader_test.cc  string_writer.cc  string_writer.h  string_writer_test.cc  universal_print.h  universal_print_test.cc  writer.h  writer_test.h
nth/io/deserialize/: BUILD  deserialize.h  deserialize_test.cc
nth/io/format/: BUILD  cc.h  cc_test.cc  common.h  common_defaults.h  common_formatters.h  format.h  interpolation_spec.h  json.h  json_test.cc
nth/io/internal/: BUILD  format.h  sequence.h
nth/io/reader/: BUILD  BUILD.bazel  file.cc  file.h  file_test.cc  reader.h  string.cc  string.h  string_test.cc  test.h
nth/io/serialize/: BUILD  deserialize.h  reader.h  reader_test.h  round_trip.h  round_trip_test.cc  sequence.h  serialize.h  serialize_test.cc  string_reader.cc  string_reader.h  string_reader_test.cc  string_writer.cc  string_writer.h  string_writer_test.cc  writer.h  writer_test.h
nth/io/writer/: BUILD  BUILD.bazel  buffered.h  file.cc  file.h  file_test.cc  null.h  null_test.cc  string.cc  string.h  string_test.cc  test.h  writer.h  writer_test.cc
nth/meta/concepts/: BUILD  BUILD.bazel  c_array.h  c_array_test.cc  comparable.h  comparable_test.cc  constructible.h  constructible_test.cc  convertible.h  convertible_test.cc  core.h  core_test.cc  hash.h  hash_test.cc  invocable.h  invocable_test.cc
nth/numeric/: BUILD  BUILD.bazel  integer.cc  integer.h  integer_test.cc  test_traits.h
nth/process/: BUILD  BUILD.bazel  env.cc  env.h  env_test.cc  exit_code.cc  exit_code.h  exit_code.xmacro.h  exit_code_test.cc  signal.cc  signal.h  signal.xmacro.h
nth/process/syscall/: BUILD  BUILD.bazel  fstat.cc  fstat.h  lseek.cc  lseek.h  open.cc  open.h  read.cc  read.h  write.cc  write.h
nth/registration/: BUILD.bazel  registrar.h  registrar_test.cc  static.h
nth/registration/internal/: BUILD.bazel  (+2 more)
nth/rust/: BUILD.bazel  cxx.rs  cxx_abi_test.cc  lib.rs  log.rs
nth/strings/: ;  BUILD  BUILD.bazel  edit_distance.cc  edit_distance.h  edit_distance_test.cc  format.h  format_test.cc  glob.h  glob_test.cc  interpolate.h  interpolate_test.cc  null_terminated_string_view.h  null_terminated_string_view_test.cc  null_termination.h  null_termination_test.cc  text.cc  text.h  text_encoding.h  text_test.cc
nth/test/: ;  BUILD  BUILD.bazel  arguments.h  arguments_test.cc  benchmark.h  benchmark_result.cc  benchmark_result.h  fakeable_function.h  fuzz.h  generator.h  main.cc  std_tracing.h  test.cc  test.h  test_test.cc
nth/try/: BUILD  BUILD.bazel  try.h  try_test.cc
nth/types/: BUILD  BUILD.bazel  reflect.h  reflect_test.cc  structure.h
nth/utility/: BUILD  BUILD.bazel  any_invocable.h  buffer.h  buffer_test.cc  bytes.h  early_exit.h  early_exit_test.cc  early_exit_test_cases.h  function_ref.h  iterator_range.h  iterator_range_test.cc  lazy.h  lazy_test.cc  move.h  move_test.cc  no_destructor.h  no_destructor_test.cc  offset_ptr.h  offset_ptr_test.cc  projected_span.h  projected_span_test.cc  ptr_union.h  ptr_union_test.cc  registration.h  registration_test.cc  required.h  required_test.cc  unconstructible.h  unconstructible_test.cc
(+262 files in other folders)
