bazel_dep(name = "abseil-cpp", version = "20240722.0")
bazel_dep(name = "platforms", version = "0.0.10")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "1e08f8e0507b6b6b1f4416a9a22cf5c28beaba93",
)

register_toolchains(
    "//bazel:linux_x86_64_toolchain",
    "//bazel:macos_arm64_toolchain",
    "//bazel:macos_x86_64_toolchain",
)
