load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "tree",
    hdrs = ["tree.h"],
    deps = [
        "//nth/algorithm/internal:tree",
        "//nth/base:core",
        "//nth/debug:unreachable",
    ],
)

cc_test(
    name = "tree_test",
    srcs = ["tree_test.cc"],
    deps = [
        ":tree",
        "//nth/test/raw:test",
    ],
)
