load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "cc",
    hdrs = ["cc.h"],
    deps = [
        ":common",
        ":format",
        "//nth/container:stack",
        "//nth/types:structure",
    ],
)

cc_test(
    name = "cc_test",
    srcs = ["cc_test.cc"],
    deps = [
        ":cc",
        "//nth/test:main",
        "//nth/types:structure",
    ],
)

cc_library(
    name = "common",
    hdrs = ["common.h"],
    deps = [
        ":format",
        ":interpolate",
    ],
)

cc_library(
    name = "format",
    srcs = [
        "common_defaults.h",
        "common_formatters.h",
    ],
    hdrs = ["format.h"],
    deps = [
        "//nth/io/writer",
        "//nth/io/writer:string",
        "//nth/memory:bytes",
        "//nth/meta:constant",
        "//nth/meta:type",
        "//nth/types:structure",
    ],
)

cc_test(
    name = "format_test",
    srcs = ["format_test.cc"],
    deps = [
        ":format",
        "//nth/test:main",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
    ],
)

cc_library(
    name = "interpolate",
    srcs = ["internal/parameter_range.h"],
    hdrs = ["interpolate.h"],
    deps = [
        ":format",
        "//nth/base:attributes",
        "//nth/base:core",
        "//nth/io/writer",
        "//nth/io/writer:string",
    ],
)

cc_test(
    name = "interpolate_test",
    srcs = ["interpolate_test.cc"],
    deps = [
        ":interpolate",
        "//nth/io/writer:string",
        "//nth/meta:type",
        "//nth/test/raw:test",
    ],
)

cc_library(
    name = "json",
    hdrs = ["json.h"],
    deps = [
        ":common",
        ":format",
        "//nth/container:stack",
        "//nth/types:structure",
    ],
)

cc_test(
    name = "json_test",
    srcs = ["json_test.cc"],
    deps = [
        ":json",
        ":structure",
        "//nth/test:main",
        "//nth/types:structure",
    ],
)

cc_library(
    name = "structure",
    hdrs = ["structure.h"],
    deps = [
        ":common",
        ":format",
        "//nth/meta/concepts:invocable",
        "//nth/types:structure",
    ],
)
