load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "file",
    srcs = ["file.cc"],
    hdrs = ["file.h"],
    deps = [
        ":file_path",
        "//nth/base:indestructible",
        "//nth/debug/contracts",
    ],
)

cc_library(
    name = "file_path",
    srcs = ["file_path.cc"],
    hdrs = ["file_path.h"],
    deps = [
        "//nth/base:core",
        "//nth/debug",
        "//nth/format",
        "//nth/format:interpolate",
        "//nth/io/writer",
    ],
)

cc_test(
    name = "file_path_test",
    srcs = ["file_path_test.cc"],
    deps = [
        ":file_path",
        "//nth/test:main",
    ],
)
