load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "integer",
    srcs = ["integer.cc"],
    hdrs = ["integer.h"],
    deps = [
        "//nth/debug",
        "//nth/format:interpolate",
        "//nth/io/reader",
        "//nth/io/writer",
        "//nth/memory:bytes",
        "//nth/meta/concepts:core",
    ],
)

cc_library(
    name = "test_traits",
    testonly = True,
    hdrs = ["test_traits.h"],
    deps = [
        "//nth/test",
    ],
)

cc_test(
    name = "integer_test",
    srcs = ["integer_test.cc"],
    deps = [
        ":integer",
        ":test_traits",
        "//nth/format:interpolate",
        "//nth/test:main",
    ],
)
