load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "env",
    srcs = ["env.cc"],
    hdrs = ["env.h"],
    deps = [
        "//nth/strings:null_terminated_string_view",
    ],
)

cc_test(
    name = "env_test",
    srcs = ["env_test.cc"],
    deps = [
        ":env",
        "//nth/meta:type",
        "//nth/test:main",
    ],
)

cc_library(
    name = "signal",
    srcs = [
        "signal.cc",
        "signal.xmacro.h",
    ],
    hdrs = ["signal.h"],
)

cc_library(
    name = "exit_code",
    srcs = [
        "exit_code.cc",
        "exit_code.xmacro.h",
    ],
    hdrs = ["exit_code.h"],
    deps = [
        ":signal",
    ],
)

cc_test(
    name = "exit_code_test",
    srcs = ["exit_code_test.cc"],
    deps = [
        ":exit_code",
        "//nth/test:main",
    ],
)
