load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "arguments",
    testonly = True,
    hdrs = ["arguments.h"],
    visibility = ["//visibility:private"],
    deps = [
        "//nth/test/internal:arguments",
        "//nth/test/internal:invocation",
    ],
)

cc_test(
    name = "arguments_test",
    srcs = ["arguments_test.cc"],
    deps = [
        ":arguments",
    ],
)

cc_library(
    name = "benchmark",
    testonly = True,
    hdrs = ["benchmark.h"],
    deps = [
        "//nth/test/internal:benchmark",
    ],
)

cc_library(
    name = "benchmark_result",
    testonly = True,
    srcs = ["benchmark_result.cc"],
    hdrs = ["benchmark_result.h"],
    deps = [
        "//nth/base:indestructible",
        "//nth/registration:registrar",
    ],
)

cc_library(
    name = "fakeable_function",
    testonly = True,
    hdrs = ["fakeable_function.h"],
    deps = [
        "//nth/base:attributes",
        "//nth/base:macros",
        "//nth/debug:fakeable_function",
        "//nth/meta:type",
        "//nth/utility:any_invocable",
    ],
)

cc_library(
    name = "fuzz",
    testonly = True,
    hdrs = ["fuzz.h"],
    deps = [
        ":generator",
        "@abseil-cpp//absl/random",
    ],
)

cc_library(
    name = "generator",
    testonly = True,
    hdrs = ["generator.h"],
    deps = [
        ":arguments",
    ],
)

cc_library(
    name = "test",
    testonly = True,
    srcs = ["test.cc"],
    hdrs = ["test.h"],
    deps = [
        ":arguments",
        ":fakeable_function",
        ":fuzz",
        "//nth/base:macros",
        "//nth/debug/contracts",
        "//nth/debug/property",
        "//nth/test/internal:test",
    ],
)

cc_library(
    name = "main",
    testonly = True,
    srcs = ["main.cc"],
    hdrs = ["test.h"],
    deps = [
        ":arguments",
        ":benchmark",
        ":benchmark_result",
        ":fakeable_function",
        ":fuzz",
        ":test",
        "//nth/base:indestructible",
        "//nth/base:macros",
        "//nth/debug/contracts",
        "//nth/debug/contracts:violation",
        "//nth/debug/log",
        "//nth/debug/log:file_log_sink",
        "//nth/debug/log:sink",
        "//nth/debug/property",
        "//nth/format",
        "//nth/format:common",
        "//nth/io/writer",
        "//nth/io/writer:file",
        "//nth/test/internal:test",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/synchronization",
    ],
)

cc_test(
    name = "test_test",
    srcs = ["test_test.cc"],
    deps = [
        ":test",
        "//nth/test/raw:test",
    ],
)
