load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "reflect",
    srcs = ["internal/reflect.h"],
    hdrs = ["reflect.h"],
    deps = [
        "//nth/base:core",
    ],
)

cc_library(
    name = "structure",
    hdrs = ["structure.h"],
    deps = [],
)

cc_test(
    name = "reflect_test",
    srcs = ["reflect_test.cc"],
    deps = [
        ":reflect",
        "//nth/test:main",
    ],
)
