load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "trace",
    hdrs = ["trace.h"],
    deps = [
        "//nth/base:attributes",
        "//nth/base:macros",
        "//nth/debug/trace/internal:trace",
        "//nth/meta:compile_time_string",
    ],
)

cc_test(
    name = "trace_test",
    srcs = ["trace_test.cc"],
    deps = [
        ":trace",
        "//nth/debug/log",
        "//nth/debug/log:file_log_sink",
        "//nth/debug/log:sink",
        "//nth/memory:address",
        "//nth/test/raw:test",
    ],
)
