load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "file",
    srcs = ["file.cc"],
    hdrs = ["file.h"],
    deps = [
        ":reader",
        "//nth/debug",
        "//nth/io:file_path",
    ],
)

cc_test(
    name = "file_test",
    srcs = ["file_test.cc"],
    deps = [
        ":file",
        "//nth/io/writer:file",
        "//nth/test:main",
    ],
)

cc_library(
    name = "reader",
    hdrs = ["reader.h"],
    deps = [
        "//nth/memory:bytes",
        "//nth/meta/concepts:comparable",
        "//nth/meta/concepts:core",
    ],
)

cc_library(
    name = "string",
    srcs = ["string.cc"],
    hdrs = ["string.h"],
    deps = [":reader"],
)

cc_test(
    name = "string_test",
    srcs = ["string_test.cc"],
    deps = [
        ":string",
        "//nth/test:main",
    ],
)
