load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "fstat",
    srcs = ["fstat.cc"],
    hdrs = ["fstat.h"],
    deps = [
        "//nth/base:attributes",
        "//nth/debug:fakeable_function",
    ],
)

cc_library(
    name = "lseek",
    srcs = ["lseek.cc"],
    hdrs = ["lseek.h"],
    deps = [
        "//nth/base:attributes",
        "//nth/debug:fakeable_function",
    ],
)

cc_library(
    name = "open",
    srcs = ["open.cc"],
    hdrs = ["open.h"],
    deps = [
        "//nth/base:attributes",
        "//nth/debug:fakeable_function",
    ],
)

cc_library(
    name = "read",
    srcs = ["read.cc"],
    hdrs = ["read.h"],
    deps = [
        "//nth/base:attributes",
        "//nth/debug:fakeable_function",
    ],
)

cc_library(
    name = "write",
    srcs = ["write.cc"],
    hdrs = ["write.h"],
    deps = [
        "//nth/base:attributes",
        "//nth/debug:fakeable_function",
    ],
)
