load("@rules_cc//cc:cc_library.bzl", "cc_library")

# package(default_visibility = ["//nth/registration:__subpackages__"])
package(default_visibility = ["//visibility:public"])

cc_library(
    name = "registry_node",
    hdrs = ["registry_node.h"],
    deps = [
        "//nth/base:indestructible",
        "@abseil-cpp//absl/synchronization",
    ],
)
