load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//nth/test:__subpackages__"])

cc_library(
    name = "arguments",
    testonly = True,
    hdrs = ["arguments.h"],
    deps = [],
)

cc_library(
    name = "benchmark",
    testonly = True,
    srcs = ["benchmark.cc"],
    hdrs = ["benchmark.h"],
    deps = [
        "//nth/meta:compile_time_string",
        "//nth/test:benchmark_result",
    ],
)

cc_library(
    name = "invocation",
    testonly = True,
    hdrs = ["invocation.h"],
    deps = [],
)

cc_library(
    name = "test",
    testonly = True,
    hdrs = ["test.h"],
    deps = [
        ":arguments",
        ":invocation",
        "//nth/base:macros",
        "//nth/meta:stateful",
        "//nth/registration:static",
        "//nth/strings:glob",
    ],
)
